log
Thu 07 Sep 2023 02:10:47 PM UTC: 
 tests:  0|6
total_score: 0/70
02bdc23
Thu 07 Sep 2023 02:37:32 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
67a4fcf
Thu 07 Sep 2023 02:44:26 PM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:10: error: ‘Pair’ has no member named ‘next’
   54 |   newPair->next = map->buckets[index];
      |          ^~
Compilation failed
eb8792c
Thu 07 Sep 2023 02:52:36 PM UTC: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:1: error: ‘e’ undeclared (first use in this function)
   45 | e
      | ^
hashmap.c:45:1: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:45:2: error: expected ‘;’ before ‘if’
   45 | e
      |  ^
      |  ;
   46 |   // Verificar si el bucket ya tiene elementos
   47 |   if (map->buckets[index] == NULL) {
      |   ~~
hashmap.c:44:10: error: unused variable ‘newPair’ [-Werror=unused-variable]
   44 |   Pair * newPair = createPair(key, value);
      |          ^~~~~~~
hashmap.c:43:8: error: unused variable ‘index’ [-Werror=unused-variable]
   43 |   long index = hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1f0bf5e
Thu 07 Sep 2023 02:52:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e1dd6b
